# Qwen-Engine

./: README.md  main.py  pyproject.toml
docs/: model_arch.md
src/engine/: __init__.py  context.py  executor.py  kvcache.py  llm_engine.py  sequence.py
src/layers/: __init__.py
src/layers/fused_ops/: __init__.py  attn.py  silumul.py
src/layers/ops/: __init__.py  embedding.py  layernorm.py  linear.py  rope.py  silu.py
src/models/: __init__.py
src/models/qwen3/: config.py  model.py  utils.py
