[project]
name = "qwen-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "torch>=2.11.0",
    "transformers>=5.5.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
